--- a/css/OAshow.css
+++ b/css/OAshow.css
@@ -21,11 +21,26 @@ body {position: absolute; width: 100%;min-height: 100%;left: 0;top: 0; backgroun
     background-image:-webkit-linear-gradient(top,#145559, #5eb39a);
     background-image:linear-gradient(top,#145559, #5eb39a);
 }
-.progress{position: absolute; top: 50%; left: 0;  width: 100%; margin-top: -44px;}
+.progress{position: absolute; top: 50%; left: 0;  width: 100%; margin-top: -120px;}
 .progresslogo img{ width: 14%; margin: 0 auto 10px; display: block;}
 .progresszi{ width: 60%; height: 4px; background: rgba(255,255,255,0.6);border-radius: 4px; margin: 0 auto;}
 .progresszi b{ display: block; height: 100%; width: 2%; background: #3fb778;border-radius: 4px; max-width: 100%;}
+
+
+.progressyuan{ width:120px; height: 120px;display: -webkit-box !important;display: box !important;position: relative; margin: 0 auto;}
+.progressyuan .pro{ overflow: hidden; width: 50%; height: 100%; position: absolute; top: 0;}
+.progressyuan .pro b{ display: block; width: 200%; height: 100%; border:6px solid  transparent; border-radius:50%; position: absolute; box-sizing: border-box; top:0; left: 0;
+     transform:rotateZ(225deg); }
+.progressyuan .pro.proleft{ left: 0;}
+.progressyuan .pro.proright{right: 0;}
+.progressyuan .pro.proleft b{ border-bottom:6px solid  #3fb778; border-left:6px solid  #3fb778; }
+.progressyuan .pro.proright b{ border-top:6px solid  #3fb778; border-right:6px solid  #3fb778;left: -100%; }
+
+.protxt{ position: absolute; width: 90%; height: 90%; top: 5%; left: 5%; border-radius: 50%; border-radius:50%; background: rgba(255,255,255,0.1); text-align: center;color: #fff; }
+.protxt img{ max-width:100%; display: block; margin: 30px auto 5px; width: 74%;}
+
 .progresstxt{ text-align: center; color: #fff; font-size: 15px; padding: 10px 0;}
+
 
 /*首页样式*/
 .title1 img{width:34.5%;}
